--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <p>A simple implementation of the <a href="http://en.wikipedia.org/wiki/Minimax">minimax</a> algorithm. There is an initial proof of concept in Python, and then a more finely-tuned version in C++. It can be compiled using emscripten, as shown on the projects Github page.</p>
+        <p>Try it out <a href="tictactoe.html">on the information superhighway</a>!</p>
       </section>
     </div>
 
